# ai-benchmark

./: .travis.yml  Dockerfile-ppc64le  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  python-publish.yml
